--- a/ai-interview-backend/package.json
+++ b/ai-interview-backend/package.json
@@ -17,9 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.10",
     "openai": "^6.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
