--- a/ai-interview-frontend/package.json
+++ b/ai-interview-frontend/package.json
@@ -9,23 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.15",
-    "axios": "^1.13.1",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.552.0",
+    "@reduxjs/toolkit": "^2.10.0",
     "next": "16.0.1",
-    "next-auth": "^4.24.13",
-    "razorpay": "^2.9.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-hot-toast": "^2.6.0"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4"
   }
 }
