--- a/ai-interview-frontend-nextjs/package.json
+++ b/ai-interview-frontend-nextjs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.10.1",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.13.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
