--- a/ai-interview-backend/package.json
+++ b/ai-interview-backend/package.json
@@ -25,7 +25,8 @@
     "nodemailer": "^7.0.10",
     "openai": "^6.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "resend": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
