--- a/ai-interview-frontend-nextjs/package.json
+++ b/ai-interview-frontend-nextjs/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-redux": "^9.2.0",
+    "react-speech-recognition": "^4.0.1",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1"
   },
